k8/botpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botpress-deployment-prueba
  namespace: default
  labels:
    app: botpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: botpress
  template:
    metadata:
      labels:
        app: botpress
    spec:
      containers:
      - name: botpress
        image: botpress/server:v12_29_1
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: /botpress/data
            name: pv-storage
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: nfs-botpress-pvc
