k8/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment-prueba
  namespace: dit
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:      
      containers:
      - name: postgres
        image: postgres:alpine3.17
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pv-storage
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: nfs-postgresql-pvc
