k8/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dit
spec:
  type: ClusterIP
  selector:
    app: postgres  
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      #nodePort: 30007
      #name: http
