k8/botpress-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botpress
  namespace: dit
spec:
  ingressClassName: nginx-default
  tls:
    - hosts:
        - cimabot.uabc.edu.mx
  rules:
  - host: cimabot.uabc.edu.mx
    http:
      paths:
      - backend:
          service:
            name: botpress-service
            port:
              number: 3000
        path: /botpress
        pathType: Prefix
